# VERONA

./: .coverage  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  PLUGIN_ARCHITECTURE.md  PYTORCH_MODEL_SUPPORT.md  README.md  __init__.py  demo_plugin_system.py  governance.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytorch_support.md  requirements.txt  roadmap.md
.github/workflows/: coverage_badge_on_merge.yml  docs.yml  lint.yml  linter.yml  pypi_release.yml  run_pytests_when_PR_opened.yml
ada_verona/: __init__.py  cli.py
ada_verona/analysis/: report_creator.py
ada_verona/database/: epsilon_status.py  epsilon_value_result.py  experiment_repository.py  network.py  verification_context.py  verification_result.py  vnnlib_property.py
ada_verona/database/dataset/: data_point.py  experiment_dataset.py  image_file_dataset.py  pytorch_experiment_dataset.py
ada_verona/database/machine_learning_model/: network.py  onnx_network.py  pytorch_network.py  torch_model_wrapper.py
ada_verona/dataset_sampler/: dataset_sampler.py  predictions_based_sampler.py
ada_verona/epsilon_value_estimator/: binary_search_epsilon_value_estimator.py  epsilon_value_estimator.py  iterative_epsilon_value_estimator.py
ada_verona/example_experiment/networks/: mnist-net_256x2.onnx  mnist-net_256x4.onnx
ada_verona/robustness_experiment_box/: __init__.py
ada_verona/scripts/: create_robustness_dist_PGD.py  create_robustness_dist_autoattack.py  create_robustness_distribution_from_test_dataset.py  create_robustness_distribution_from_test_dataset_abcrown.py  create_robustness_distribution_from_test_dataset_nnenum.py  create_robustness_distribution_from_test_dataset_ovalbab.py  create_robustness_distribution_from_test_dataset_verinet.py
ada_verona/util/: logger.py
ada_verona/verification_module/: attack_estimation_module.py  auto_verify_module.py  test_verification_module.py  verification_module.py
api/: index.html
developer-notes/: index.html
docs/: api.md  developer-notes.md  how-to-guides.md  index.md  pytorch_support.md
example_experiment/data/: image_labels.csv
examples/: README.md  create_header.py  networks.csv  resnet18.py  test_pytorch_support.py
examples/notebooks/: HOWTO_compute_robustness_dists_with_PGD_AutoAttack_ABCROWN.ipynb  VERONA_Tutorial_Quickstart.ipynb  VERONA_tutorial_with_AutoAttack_and_AutoVerify.ipynb  test_verification_timm.ipynb
examples/scripts/: create_robusntess_dist_EXAMPLE.py  create_robustness_dist_EXAMPLE.py  create_robustness_dist_autoattack.py  create_robustness_dist_foolbox.py  create_robustness_dist_foolbox_cw.py  create_robustness_dist_on_pytorch_dataset.py  create_robustness_dist_pgd.py  create_robustness_distribution_from_test_dataset.py  loading_pytorch.py
experiment_runs/PGDattack_31-07-2025+14_10/: configuration.json
experiment_runs/PGDattack_31-07-2025+15_38/: configuration.json
experiment_runs/PGDattack_31-07-2025+15_39/: configuration.json
helperscripts/: setup_venv.sh
how-to-guides/: index.html
local_hooks/: @check_requirements_sync.py
notebooks/: HOWTO_compute_robustness_dists_with_PGD_AutoAttack_ABCROWN.ipynb  HOWTO_compute_robustness_dists_with_PGD_and_AutoAttack.ipynb  auto_verify_module_csv_tutorial.ipynb  auto_verify_module_tutorial.ipynb  transfer_learning_distributions.ipynb
pytorch_support/: index.html
robustness_experiment_box/analysis/: report_creator.py
robustness_experiment_box/database/: epsilon_status.py  epsilon_value_result.py  experiment_repository.py  network.py  torch_model_wrapper.py  verification_context.py  verification_result.py  vnnlib_property.py
robustness_experiment_box/dataset_sampler/: dataset_sampler.py  predictions_based_sampler.py
robustness_experiment_box/epsilon_value_estimator/: adjusted_binary_search_epsilon_value_estimator.py  binary_search_epsilon_value_estimator.py  epsilon_value_estimator.py  iterative_epsilon_value_estimator.py  quartered_binary_search_epsilon_value_estimator.py  randomized_smoothing_estimator.py
robustness_experiment_box/util/: logger.py
robustness_experiment_box/verification_module/: attack_estimation_module.py  auto_verify_module.py  nnenum_module.py  randomized_smoothing_module.py  test_verification_module.py  verification_module.py  verification_runner.py
scripts/: create_robustness_dist_PGD.py  create_robustness_dist_autoattack.py  create_robustness_dist_on_pytorch_dataset.py  create_robustness_dist_on_pytorch_dataset_FGSM.py  create_robustness_distribution_from_test_dataset.py  loading_pytorch.py  randomized_smoothing_example.py  test_loading_pytorch.py
scripts/multiple_jobs/: main_create_robustness_dist_multiple_jobs.py  one_multiple_jobs.py
search/: search_index.json
src/ada_verona/: __init__.py  cli.py  setup.py
tests/: test_init.py
tests/test_analysis/: test_report_creator.py
tests/test_data_sampler/: test_dataset_sampler.py  test_prediction_based_sampler.py
tests/test_database/: conftest.py  test_base_network.py  test_epsilon_status.py  test_epsilon_value_result.py  test_experiment_repository.py  test_network.py  test_network_factory.py  test_pytorch_network.py  test_torch_model_wrapper.py  test_verification_context.py  test_verification_result.py  test_vnnlib_property.py
tests/test_dataset_sampler/: test_dataset_sampler.py  test_prediction_based_sampler.py
tests/test_epsilon_value_estimator/: conftest.py  test_binary_search_epsilon_evalue_estimator.py  test_binary_search_epsilon_value_estimator.py  test_epsilon_value_estimator.py  test_iterative_epsilon_value_estimator.py  test_quartered_binary_search_epsilon_value_estimator.py
tests/test_util/: test_logger.py
tests/test_verification_module/: conftest.py  test__verification_module.py  test_attack_estimation_module.py  test_auto_verify_module.py  test_auto_verify_module_sdpcrown_metadata.py  test_nnenum_module.py  test_test_verification_module.py  test_verification_module.py
tools/: create_experiment_folder.py
tutorials/: index.html
venvs/venv_ada-verona_standalone_test/: pyvenv.cfg
(+738 files in other folders)
