[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ada-verona"
version = "1.0.0"
description = "Neural Network Robustness Analysis Framework"
authors = [
    {name = "Annelot Bosman", email = "a.w.bosman@liacs.leidenuniv.nl"},
    {name = "Aaron Berger", email = "A.Berger@tudelft.nl"},
    {name = "Hendrik Baacke", email = "hendrik.baacke@rwth-aachen.de"},
    {name = "Jan van Rijn", email = "jan.vanrijn@liacs.leidenuniv.nl"},
    {name = "Holger H. Hoos", email = "hh@aim.rwth-aachen.de"}
]
author = "Annelot Bosmann, Aaron Berger, Hendrik Baacke, Jan van Rijn, Holger H. Hoos"
author_email = "a.w.bosman@liacs.leidenuniv.nl, aaron.berger@rwth-aachen.de, hendrik.baacke@rwth-aachen.de, jan.vanrijn@liacs.leidenuniv.nl, hh@aim.rwth-aachen.de"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["neural networks", "robustness", "verification", "adversarial", "adversarial robustness", "adversarial attacks", "AI safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux", 
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
dependencies = [
    # Basic dependencies
    "click>=8.1.7",
    "cloudpickle>=3.0.0",
    "coloredlogs>=15.0.1",
    "ConfigSpace>=0.7.1",
    "dask>=2024.4.1",
    "dask-jobqueue>=0.8.5",
    "distributed>=2024.4.1",
    "emcee>=3.1.4",
    "filelock>=3.18.0",
    "fsspec>=2024.3.1",
    "humanfriendly>=10.0",
    "Jinja2>=3.1.3",
    "joblib>=1.4.0",
    "matplotlib>=3.10.0",
    "more-itertools>=10.2.0",
    "numpy>=1.24.3",
    "onnx>=1.14.0",
    "onnx2torch>=1.5.14",
    "onnxruntime>=1.14.1",
    "packaging>=24.0",
    "pandas>=2.0.1",
    "pillow>=11.3.0",
    "protobuf>=5.26.1",
    "psutil>=5.9.8",
    "pyautoattack>=0.2.0",
    "pynisher>=1.0.10",
    "pyparsing>=3.1.2",
    "pyrfr>=0.9.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.1",
    "regex>=2023.12.25",
    "result>=0.9.0",
    "scikit-learn>=1.4.1",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "smac>=2.0.2",
    "sortedcontainers>=2.4.0",
    "sympy>=1.12",
    "threadpoolctl>=3.4.0",
    "toolz>=0.12.1",
    "torch>=2.6.0",
    "torchaudio", 
    "torchvision>=0.18.1",
    "tornado>=6.4",
    "tqdm>=4.66.2",
    "typing_extensions",
    "urllib3>=2.2.1",
]

[project.optional-dependencies]
gpu = [
    "nvidia-cublas-cu12>=12.1.0,<13.0.0",
    "nvidia-cuda-cupti-cu12>=12.1.0,<13.0.0",
    "nvidia-cuda-nvrtc-cu12>=12.1.0,<13.0.0",
    "nvidia-cuda-runtime-cu12>=12.1.0,<13.0.0",
    "nvidia-cudnn-cu12>=9.1.0,<10.0.0",
    "nvidia-cufft-cu12>=11.0.0,<12.0.0",
    "nvidia-curand-cu12>=10.3.0,<11.0.0",
    "nvidia-cusolver-cu12>=11.4.0,<12.0.0",
    "nvidia-cusparse-cu12>=12.1.0,<13.0.0",
    "nvidia-nccl-cu12>=2.20.0,<3.0.0",
    "nvidia-nvjitlink-cu12>=12.4.0,<13.0.0",
    "nvidia-nvtx-cu12>=12.1.0,<13.0.0",
    "triton>=3.2.0,<4.0.0",
]

cpu = [
    "click>=8.1.7",
    "cloudpickle>=3.0.0",
    "coloredlogs>=15.0.1",
    "ConfigSpace>=0.7.1",
    "dask>=2024.4.1",
    "dask-jobqueue>=0.8.5",
    "distributed>=2024.4.1",
    "emcee>=3.1.4",
    "filelock>=3.18.0",
    "fsspec>=2024.3.1",
    "humanfriendly>=10.0",
    "Jinja2>=3.1.3",
    "joblib>=1.4.0",
    "matplotlib>=3.10.0",
    "more-itertools>=10.2.0",
    "numpy>=1.24.3",
    "onnx>=1.14.0",
    "onnx2torch>=1.5.14",
    "onnxruntime>=1.14.1",
    "packaging>=24.0",
    "pandas>=2.0.1",
    "pillow>=11.3.0",
    "protobuf>=5.26.1",
    "psutil>=5.9.8",
    "pyautoattack>=0.2.0",
    "pynisher>=1.0.10",
    "pyparsing>=3.1.2",
    "pyrfr>=0.9.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.1",
    "regex>=2023.12.25",
    "result>=0.9.0",
    "scikit-learn>=1.4.1",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "smac>=2.0.2",
    "sortedcontainers>=2.4.0",
    "sympy>=1.12",
    "threadpoolctl>=3.4.0",
    "toolz>=0.12.1",
    "torch>=2.6.0",
    "torchaudio", 
    "torchvision>=0.18.1",
    "tornado>=6.4",
    "tqdm>=4.66.2",
    "typing_extensions",
    "urllib3>=2.2.1",
]

# Development dependencies with full package + tools
dev = [
    # Basic dependencies
    "click>=8.1.7",
    "cloudpickle>=3.0.0",
    "coloredlogs>=15.0.1",
    "ConfigSpace>=0.7.1",
    "dask>=2024.4.1",
    "dask-jobqueue>=0.8.5",
    "distributed>=2024.4.1",
    "emcee>=3.1.4",
    "filelock>=3.18.0",
    "fsspec>=2024.3.1",
    "humanfriendly>=10.0",
    "Jinja2>=3.1.3",
    "joblib>=1.4.0",
    "matplotlib>=3.10.0",
    "more-itertools>=10.2.0",
    "numpy>=1.24.3",
    "onnx>=1.14.0",
    "onnx2torch>=1.5.14",
    "onnxruntime>=1.14.1",
    "packaging>=24.0",
    "pandas>=2.0.1",
    "pillow>=11.3.0",
    "protobuf>=5.26.1",
    "psutil>=5.9.8",
    "pyautoattack>=0.2.0",
    "pynisher>=1.0.10",
    "pyparsing>=3.1.2",
    "pyrfr>=0.9.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.1",
    "regex>=2023.12.25",
    "result>=0.9.0",
    "scikit-learn>=1.4.1",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "smac>=2.0.2",
    "sortedcontainers>=2.4.0",
    "sympy>=1.12",
    "threadpoolctl>=3.4.0",
    "toolz>=0.12.1",
    "torch>=2.6.0",
    "torchaudio", 
    "torchvision>=0.18.1",
    "tornado>=6.4",
    "tqdm>=4.66.2",
    "typing_extensions",
    "urllib3>=2.2.1",
    
    # Devel tools
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.3.4",
    "black>=22.0.0",
    "mypy>=0.991",
    "build>=0.10.0",
    "twine>=4.0.0",
]

# Development dependencies with GPU support
dev-gpu = [
    # Basic dependencies
    "click>=8.1.7",
    "cloudpickle>=3.0.0",
    "coloredlogs>=15.0.1",
    "ConfigSpace>=0.7.1",
    "dask>=2024.4.1",
    "dask-jobqueue>=0.8.5",
    "distributed>=2024.4.1",
    "emcee>=3.1.4",
    "filelock>=3.18.0",
    "fsspec>=2024.3.1",
    "humanfriendly>=10.0",
    "Jinja2>=3.1.3",
    "joblib>=1.4.0",
    "matplotlib>=3.10.0",
    "more-itertools>=10.2.0",
    "numpy>=1.24.3",
    "onnx>=1.14.0",
    "onnx2torch>=1.5.14",
    "onnxruntime>=1.14.1",
    "packaging>=24.0",
    "pandas>=2.0.1",
    "pillow>=11.3.0",
    "protobuf>=5.26.1",
    "psutil>=5.9.8",
    "pyautoattack>=0.2.0",
    "pynisher>=1.0.10",
    "pyparsing>=3.1.2",
    "pyrfr>=0.9.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.1",
    "regex>=2023.12.25",
    "result>=0.9.0",
    "scikit-learn>=1.4.1",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "smac>=2.0.2",
    "sortedcontainers>=2.4.0",
    "sympy>=1.12",
    "threadpoolctl>=3.4.0",
    "toolz>=0.12.1",
    "torch>=2.6.0",
    "torchaudio", 
    "torchvision>=0.18.1",
    "tornado>=6.4",
    "tqdm>=4.66.2",
    "typing_extensions",
    "urllib3>=2.2.1",
    
    "nvidia-cublas-cu12>=12.1.0,<13.0.0",
    "nvidia-cuda-cupti-cu12>=12.1.0,<13.0.0",
    "nvidia-cuda-nvrtc-cu12>=12.1.0,<13.0.0",
    "nvidia-cuda-runtime-cu12>=12.1.0,<13.0.0",
    "nvidia-cudnn-cu12>=9.1.0,<10.0.0",
    "nvidia-cufft-cu12>=11.0.0,<12.0.0",
    "nvidia-curand-cu12>=10.3.0,<11.0.0",
    "nvidia-cusolver-cu12>=11.4.0,<12.0.0",
    "nvidia-cusparse-cu12>=12.1.0,<13.0.0",
    "nvidia-nccl-cu12>=2.20.0,<3.0.0",
    "nvidia-nvjitlink-cu12>=12.4.0,<13.0.0",
    "nvidia-nvtx-cu12>=12.1.0,<13.0.0",
    "triton>=3.2.0,<4.0.0",
    
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.3.4",
    "black>=22.0.0",
    "mypy>=0.991",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ADA-research/VERONA"
Repository = "https://github.com/ADA-research/VERONA" 
Documentation = "https://ada-research.github.io/VERONA/"
Issues = "https://github.com/ADA-research/VERONA/issues"


[tool.hatch.build.targets.wheel]
packages = ["ada_verona"]
exclude = [
    "*.pyc",
    "__pycache__/**/*",
    "*.log",
    "*.tmp",
    "*.bak",
    ".DS_Store",
    "Thumbs.db"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.ruff]
line-length = 120
exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F", 
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]